jaeger/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: jaegerquery-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaegerquery
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - jaegerquery-gateway
  http:
    - match:
        - uri:
            prefix: /jaeger
      route:
        - destination:
            host: jaeger-query
            port:
              number: 16686
